kubernetes/dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yummy-dev
  labels: 
    name: yummy-dev
