kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yummy-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: yummy-phoenix-graphql-ip
    kubernetes.io/ingress.class: 'gce'
spec:
  tls:
    - secretName: tls-secret
  backend:
    serviceName: frontend-svc
    servicePort: 80
  rules:
    - host: staging.yummy-phoenix-graphql.com
      http:
        paths:
          - path: /graphql
            backend:
              serviceName: api-svc
              servicePort: 80
          - path: /socket/*
            backend:
              serviceName: api-svc
              servicePort: 80
